--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "stream-chat": "^4.1.0",
-    "stream-chat-react": "^6.5.1",
+    "stream-chat": "^4.4.3",
+    "stream-chat-react": "^6.13.0",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.0.1"
   },
